[gd_scene load_steps=2 format=2]

[ext_resource path="res://app.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.542847
margin_right = -0.542847
script = ExtResource( 1 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 4.0
margin_top = 38.0
margin_right = 1011.0
margin_bottom = 594.0

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 161.0
margin_top = 135.0
margin_right = 836.0
margin_bottom = 451.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Users/awooldridge/godot-games/text_edit"
current_file = "default_env.tres"
current_path = "/Users/awooldridge/godot-games/text_edit/default_env.tres"

[node name="SaveDialog" type="FileDialog" parent="."]
margin_left = 161.0
margin_top = 135.0
margin_right = 836.0
margin_bottom = 451.0
window_title = "Save a file"
access = 2
current_dir = "/Users/awooldridge/godot-games/text_edit"
current_file = "default_env.tres"
current_path = "/Users/awooldridge/godot-games/text_edit/default_env.tres"

[node name="MenuButtonFile" type="MenuButton" parent="."]
margin_right = 167.0
margin_bottom = 31.0
text = "File"

[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_SaveDialog_file_selected"]
